--- a/app/src/main/res/layout/activity_pizza.xml
+++ b/app/src/main/res/layout/activity_pizza.xml
@@ -8,53 +8,36 @@
     tools:context="br.com.fiap.exercicios.listview.rm77078.PizzaActivity">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:id="@+id/imgPizzaDesc"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="24dp"
+        android:layout_margin="24dp"
+        android:id="@+id/imgPizza"
+        tools:src="@drawable/pizza"/>
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/nmPizzaDesc"
-        android:textAlignment="center"
-        android:textSize="40sp"
-        android:text="Pizza de Mussarela"/>
+        tools:text="Nome da Pizza"
+        android:id="@+id/txtNomePizza"
+        android:layout_gravity="center_horizontal"
+        android:textSize="20sp"/>
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/nmDescricaoDesc"
-        android:text="bbb"
-        android:textSize="30sp"/>
+        tools:text="Descrição da pizza"
+        android:id="@+id/txtDescricao"
+        android:layout_gravity="center_horizontal"
+        android:textSize="20sp"/>
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/nmIngredientesDesc"
-        android:text="Queijo Prata"
-        android:textSize="30sp"/>
-
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Pontuação:"
-        android:layout_weight="1"
-        android:textSize="40sp"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/nmPontosDesc"
-        android:text="10"
-        android:textAlignment="center"
-        android:textSize="50sp"
-        android:layout_weight="2"/>
-
-</LinearLayout>
+        tools:text="Valor da pizza"
+        android:id="@+id/txtValor"
+        android:layout_gravity="center_horizontal"
+        android:textSize="20sp"/>
 
 </LinearLayout>
