3 Fase concluida , falta so o botao para a slapsh

--- a/app/src/main/res/layout/activity_pizza.xml
+++ b/app/src/main/res/layout/activity_pizza.xml
@@ -40,4 +40,12 @@
         android:layout_gravity="center_horizontal"
         android:textSize="20sp"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="Pontuação"
+        android:id="@+id/txtPontuacao"
+        android:layout_gravity="center_horizontal"
+        android:textSize="20sp"/>
+
 </LinearLayout>
