--- a/app/src/main/res/layout/activity_preferencias.xml
+++ b/app/src/main/res/layout/activity_preferencias.xml
@@ -8,32 +8,56 @@
     tools:context="br.com.fiap.exercicios.listview.rm77078.Preferencias">
 
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Splashcreen"
+        android:textSize="30sp"
+        android:textColor="#000"
+        android:textAlignment="center"
+        android:layout_marginBottom="10dp"/>
+
     <RadioGroup
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="wrap_content"
+        android:layout_gravity="center">
 
-        <TextView
+        <RadioButton
+            android:id="@+id/chkAtivar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Você deseja pular a primira tela ?"/>
+            android:layout_gravity="center"
+            android:checked="true"
+            android:text="Ativar Splashscreen" />
 
-        <CheckBox
-            android:text="CheckBox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/chkPular"
-            android:layout_weight="1" />
-
-        <TextView
+        <RadioButton
+            android:id="@+id/chkDesativar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Você não deseja pular a tela inicial ? "/>
-
-        <CheckBox
-            android:text="CheckBox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/chkNaoPular"
-            android:layout_weight="1" />
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
+            android:text="Desativar Splashscreen" />
     </RadioGroup>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Segundos da SplashScreen"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:textColor="#000"
+        android:layout_marginBottom="20dp"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/edtSegundos"
+        android:textAlignment="center"
+        android:text="5 segundos = 5000 "/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Salvar Preferencias"
+        android:layout_gravity="center"
+        android:onClick="salvar"/>
 </LinearLayout>
