--- a/app/src/main/res/layout/activity_preferencias.xml
+++ b/app/src/main/res/layout/activity_preferencias.xml
@@ -11,46 +11,44 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/splashcreen"
-        android:textSize="30sp"
-        android:textColor="#000"
+        android:text="@string/desativar_splashscreen"
         android:textAlignment="center"
-        android:layout_marginBottom="10dp"/>
+        android:textAppearance="@color/colorPrimary"
+        android:textSize="30sp"/>
 
-    <RadioGroup
-        android:layout_width="match_parent"
+    <Switch
+        android:id="@+id/desativarSplash"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center">
+        android:layout_gravity="center"/>
 
-        <RadioButton
-            android:id="@+id/chkDesativar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Desativar Splashscreen"
-            android:layout_marginBottom="20dp"/>
-
-    </RadioGroup>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/segundos_da_splashscreen"
+        android:layout_marginTop="16dp"
         android:textAlignment="center"
+        android:textAppearance="@color/colorPrimary"
         android:textSize="30sp"
-        android:textColor="#000"
-        android:layout_marginBottom="20dp"/>
+        android:text="@string/tempo_da_splashscreen"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/edtSegundos"
+        android:inputType="number"
+        android:id="@+id/campoSplash"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:text="5 segundos = 5000 "/>
+        android:text="@string/help_preferencias"/>
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Salvar Preferencias"
         android:layout_gravity="center"
-        android:onClick="salvar"/>
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:onClick="savePreferences"
+        android:text="@string/salvar_preferencias"/>
 </LinearLayout>
